Bug 124472 - FILEOPEN DOCX Field code change is not parsed as Track Changes entry
Summary: FILEOPEN DOCX Field code change is not parsed as Track Changes entry
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Czeber László Ádám (NISZ)
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2019-04-01 14:11 UTC by NISZ LibreOffice Team
Modified: 2023-03-31 06:46 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
The Manage changes window (97.23 KB, image/png)
2019-04-01 14:11 UTC, NISZ LibreOffice Team
Details
The Hyperlink window editing the changed links (110.65 KB, image/png)
2019-04-01 14:12 UTC, NISZ LibreOffice Team
Details
Example file with two modified hyperlinks with change tracking (32.44 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-04-01 14:13 UTC, NISZ LibreOffice Team
Details
other test example (12.80 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-03-17 15:57 UTC, László Németh
Details
first hypertext only with deleted command (12.77 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-03-27 13:04 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-04-01 14:11:09 UTC
Description:
When the attached document containing a changed field code is opened in Writer the change is not shown in the Mange Changes window as it is in Word. This causes the changed hyperlink fields to contain garbage and effectively they are unusable.

Steps to Reproduce:
    1. In Word create some hyperlinks: web address and e-mail address too
    2. Turn on change tracking
    3. Edit the existing hyperlinks and change their type: the e-mail address to web page and web page to e-mail address.
    4. Word will indicate the changes with “Field code has changed” entries.
    5. Open the document in Writer and edit the links. The URL will contain the previous target, the text HYPERLINK and the new target, while the text will contain the previous and the new link texts too.
    6. Open the Manage Changes window. There are fewer entries (4 vs 10) than in the original file.
       Accepting or rejecting the changes causes the URL to not change (stays broken), only the text becomes the new one (or the old one in case of rejecting).

Actual Results:
The hyperlinks are broken.

Expected Results:
The hyperlinks are usable with tracked changes, also after accepting or rejecting those changes.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details: 
Version: 6.3.0.0.alpha0+
Build ID: ade1df0948563b532a5d293c31d46a4f042559ee
CPU threads: 4; OS: Windows 6.3; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded

Already present in: 
LibreOffice 3.5.0rc3 
Build ID: 7e68ba2-a744ebf-1f241b7-c506db1-7d53735
Comment 1 NISZ LibreOffice Team 2019-04-01 14:11:56 UTC
Created attachment 150454 [details]
The Manage changes window
Comment 2 NISZ LibreOffice Team 2019-04-01 14:12:26 UTC
Created attachment 150455 [details]
The Hyperlink window editing the changed links
Comment 3 NISZ LibreOffice Team 2019-04-01 14:13:43 UTC
Created attachment 150456 [details]
Example file with two modified hyperlinks with change tracking
Comment 4 Xisco Faulí 2019-05-06 16:58:42 UTC
Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: e44c31d68b026ad9cd954dc572cb1460958a6327
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 5 Ramoji. R 2020-12-03 09:46:53 UTC Comment hidden (spam)
Comment 6 Aron Budea 2022-10-27 03:36:16 UTC
Still in LO 7.5.0.0.alpha0+ (5a1f41a0d3aab15c113651f2edc9d4137ae99063) / Windows.
Comment 7 László Németh 2023-03-17 15:57:15 UTC
Created attachment 186034 [details]
other test example
Comment 8 László Németh 2023-03-27 13:04:38 UTC
Created attachment 186245 [details]
first hypertext only with deleted command
Comment 9 Commit Notification 2023-03-29 14:58:47 UTC
Czeber László Ádám committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8bf897186de81b39064340c44a54db344d6878f6

tdf#124472 DOCX import: fix broken field command by skipping delInstrText

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 NISZ LibreOffice Team 2023-03-31 06:46:51 UTC
VERIFIED IN:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b463f697405e64a03378fb38a32172c4d3c25e6
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded